--- a/summary/r4ds_data_visualisation.Rmd
+++ b/summary/r4ds_data_visualisation.Rmd
@@ -1,22 +1,20 @@
 ---
-title: "R for Data Science Summary Series"
+title: "R for Data Science Summary Series I"
+subtitle: "Data Visualisation with ggplot2"
 author: "Fisher Ankney"
-date: "January 17, 2018"
+date: "January 19, 2018"
 output: html_document
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Data visualisation with ggplot2
+This is the first of a five part series summarsing the core concepts of Hadley Wickham's R for Data Science: <http://r4ds.had.co.nz/>. 
 
-This is the first of a five part series summarsing what I've learned while working through Hadley Wickham's R for Data Science: <http://r4ds.had.co.nz/>. 
+I'd recommend Hadley's book as an excellent and most comprehensive introduction to R programming. Hadley immediately introduces data visualisation concepts in R4DS, giving students a fun and highly functional introduction to R. While the data visualisation is continously referenced throughout the text, it is heavily emphasized in chapters 3, 7, and 28. This write up is an attempt to synthesis this information in a valueable and concise manner. Of course, this isn't a conprehensive guide to ggplot2, rather it's a small collection of code snippets and ideas that I find solve 80% of my ggplot2 problems.     
 
-I'd recommend Hadley's book as an excellent and most comprehensive introduction to R programming. Data visualisation is the first concept he introduces in the text. Data visualisation is incorporated throughout the entirety of R4DS, however it's most heavily covered in chapters 3, 7, and 28. The goal of this write up is to create a consise data visualisation reference guide based the concepts in these chapters. 
+For more useful resources, including advanced ggplot2 techniques, check out these links:       
 
-<br  />
-
-#### Other Useful References    
 R Graphics ggplot2 Cookbook - <http://www.cookbook-r.com/Graphs/>     
 Top 50 Visualizations - <http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html>    
 R Studio's ggplot2 Cheat Sheet - <https://www.rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf>    
@@ -24,18 +22,20 @@ Hadley's ggplot2 book (amazon) - <https://www.amazon.com/dp/331924275X/ref=cm_sw
 
 <br  />
 
-#### Associated Libraries 
+### Associated Libraries 
 ```{r message=FALSE}
-library('tidyverse')
-library('ggplot2')
-library('RColorBrewer')
-library('maps')
+# install.packages('tidyverse', 'RColorBrewer', 'maps')
+
+library('tidyverse')     # install ggplot2 and associated tidyverse packages
+library('ggplot2')       # install only ggplot2
+library('RColorBrewer')  # install for excellent color palettes
+library('maps')          # install for geospatial visualisations
 ```
-Be sure to install the packages on your computer using "install.packages('library_name')" before calling them with the library function. Tidyverse is an umbrella package that includes associated Hadley Wickham data science packages such as dplyr, tidyr, readr, etc. If you call for the tidyverse package, it is unnecessary to call again for the ggplot2 package. RColorBrewer provides easy access to an assortment of excellent color palettes. The maps package allows for simple geospatial plots of a select number of countries, including the continental United States. 
+I recommend installing the entirity of the tidyverse whenever you're looking to work with and graph data. If you don't want access to the other useful tidyverse tools, it's fine to just call the ggplot2 package by itself. RColorBrewer is my favorite way to quickly create visualy pleasing color schemes, but there are many other packages out there to choose from. The maps package integrates with ggplot2 really well, but there are probably better geospatial packages out there.    
 
 <br  />
 
-#### Basic Template
+### Graphing Template
 ```{r eval=FALSE}
 ggplot( < enter data here > ) +            
 geom_< enter geometry here >(              
@@ -46,26 +46,26 @@ geom_< enter geometry here >(
 coord_< enter coordinate system here >() +          
 facet_< enter facet system here >()              
 ```
-The basic idea here is that you can create and describe any possible graph with these seven parameters. I'll go through the most useful options for each of the necessary parameters, as well as the optional parameters that alter other aestetics like the legend and axes.
+With these seven parameters you can create and describe any possible plot. This is the underlying tidyverse philosophy, giving a 'grammer to graphics' as it were. Now let's go through these parameters individually, and toss in a few additional aestetic parameters for good measure.    
 
 <br  /> 
 
-#### ggplot
+### Base Graph
 ```{r}
 ggplot(mpg)
 ```
-     
-As you can see, entering a dataset into the ggplot function isn't enough to produce a graph. ggplot() simply produces the base layer of the plot, you must specify geometry, mapping, aestetics, and so on to actually produce a plot. use 'ggplot() +' to link the base layer to these necissary specifications. 
+      
+Just calling ggplot( ) with an assoicated dataset will create a canvas for your graphic, but it won't do much else. We really need to add a geometry to the ggplot recipe.    
 
 <br  />
 
-#### Geometry
+### Geometry
 ```{r}
 ggplot(mpg) +
   geom_point(mapping = aes(x = displ, y = hwy))
 ```
-
-the geom_( ) function does the majority of the grunt work in ggplot2. There are two necissary choices to be made with this function, choosing a geometry, and choosing the mappable variables. Additional commands are included within the geom( ) call, including aestetic specifications, statistical transformations, and position adjustments. 
+     
+Declaring a plot geometry is perhaps the most important part of a ggplot recipe; when you're doing exploratory data analysis I find  you typically don't have to go any further than calling the geom function and declaring it's mappable variables. I've listed the handful of geometries, mappings, and aestetics that I use most often. There are hundreds of geometries if you include the extensions that the ggplot community has created; if you can imagine it, there's probably a ggplot geometry that can do it.  
 
 ##### Geometries    
 * **geom_density( )** - 1 variable gaussian distribution
@@ -83,7 +83,7 @@ the geom_( ) function does the majority of the grunt work in ggplot2. There are 
 * **aes( ..., size = )** typically a third or fourth variable
 
 ##### Aestetics 
-* **size =** double (in millimeters)
+* **size =** size of a point, declared by a double
 * **linetype =** 0 (blank), 1 (solid), 1 (dashed), 3 (dotted), 4 (dot-dash), 5 (long-dash), 6 (two-dash)
 * **weight =** (line thickness) double
 * **color =** (outline) string
@@ -92,8 +92,9 @@ the geom_( ) function does the majority of the grunt work in ggplot2. There are 
 
 <br  />
 
-#### Statistical Transformations    
-Sometimes you want to visualize a transformed version of the original data. My most commonly used statistcal transformation is identity, use this transformation with geom_bar to visualize a variable instead of a count.   
+### Statistical Transformations    
+
+Sometimes you want to visualize a transformed version of the original data. The statistical transformation I use most often is the identity trasformation with geom_bar. There are, however, several other useful transformations.       
     
 * **geom_(aes(...), stat = "count")** - visualise the number of entires in a variable, n()    
 * **geom_(aes(...), stat = "identity")** - visuaise the variable, not the count    
@@ -101,8 +102,8 @@ Sometimes you want to visualize a transformed version of the original data. My m
 
 <br  />
 
-#### Position Adjustments
-When geometric data occupies the same space, it is useful to use a position adjustment to better understand the visualisation.    
+### Position Adjustments
+When geometric data occupies the same space, it is useful to use a position adjustment to better understand the visualisation. I really only find adjusting the positioning of data useful when I'm working with bar charts and scatterplots.   
     
 * **geom_point(aes(...), position = "jitter")** - adds a small amount of noise to better view overlapping points     
 * **geom_bar(aes(...), position = "dodge")** - arranges bar elements side-by-side    
@@ -110,23 +111,23 @@ When geometric data occupies the same space, it is useful to use a position adju
 
 <br  />
    
-#### Coordinate Systems
+### Coordinates
 ```{r}
 ggplot(mpg) +
   geom_point(mapping = aes(x = displ, y = hwy)) + 
   coord_flip()  
 ```
 <br  />     
-Sometimes it's useful to change the coordinate system in a particular plot. This will affect the axes and how the data is plotted. I find the most useful coordinate transformations to be coord_flip (typically with bar plots) and coord_trans (typically with exponential or logarithmic trends).    
+A cartesian coordinates are the go-to for 95% of my visualisations, but the coord_ function does more than call different coordinate systems. Often it's useful to fix the x-y ratio, or flip the axis of bar charts. When your working with exponential data, you may want to transform an axis to a logarithmic system. These useful functions and many more can be done by the coord_ function.    
     
 * **coord_fixed(ratio, xlim, ylim)** - fixing the aspect ratio between x and y
 * **coord_flip(xlim, wlim)** - flipping the axes 
 * **coord_polar(theta, start, direction)** - coverting cartesian to polar coordinates
-* **coord_trans(xtrans, ytrans, limx, limy)** - transform cartesian coordiantes, use with log / exponent functions    
+* **coord_trans(xtrans, ytrans, limx, limy)** - transform cartesian coordiantes, use with log functions    
 * **coord_map(projection, orientation, xlim, ylim)** - mapproj package projections 
    
    
-#### Facets
+### Facets
 
 ```{r}
 ggplot(data = mpg) + 
@@ -134,16 +135,14 @@ ggplot(data = mpg) +
   facet_wrap(~ class, nrow = 2)
 ```
      
-Dividing a plot into subplots can be helpful when you want to evaluate a dataset based on the values of one or more discrete variables. 
+I don't use facets that much; to be honest I find them pretty distracting. If you're a fan of contrasting minerature plots, you might find these faceting options useful.    
 
-* **facet_grid(x ~ ., labeller, scales)** - facets the display into columns based on the given variable and placeholder "."    
-* **facet_grad(. ~ x, labeller, scales)** - facets the display into rows based on the given variable and plcaeholder "."     
-* **facet_grid(x ~ y, labeller, scales)** - facets the display into rows and columns based on the two given variables.    
+* **facet_grid(x ~ y, labeller, scales)** - facets the display into rows and columns based on the two given variables ("."" placeholder)    
 * **facet_wrap(~ x, labeller, scales, nrow, ncol)** - wraps facets into a rectangular layout    
 
 <br  /> 
      
-#### Labels  
+### Labels  
 ```{r}
 ggplot(mpg) + 
   labs(
@@ -155,26 +154,24 @@ ggplot(mpg) +
   )
 ```
       
-
-Labels are very important for effectively communication within your visualisation. Any label can contain mathematical formulas by using the quote( ) function. for more information on this, type ?plotmath into the R console.    
+Labels are helpful for properly communicating your visualisation. Including these five labels with your plots can help clarify your topic, variables, and sources.    
 
 <br  />
 
-#### Annotations     
-
-It can be useful to label major compnents and interesting observations within your visualisation. To add annotations to your plot, call the geom_text( ) function and assigne the aes( label = ) to a variable of interest. I don't particularly care for annotating individual observations, as I find it clutters the graphic. 
-
+### Annotations     
+Annotations are another feature I don't use too often, but I'll include them anyways. I think annotating individual observations is a mistake, it clutters the graphic and takes away from the effectiveness of the visualisation. Packages like plotly and shiny do a better job of creating interactive graphics if you want individual labels. If you, however, insist on creating a ggplot with annotations, these might be useful.     
+      
 * **geom_text(aes(label = "text here"), vjust = , hjust = )** - places a summary annotation within the graphic, according to vjust and hjust     
 * **geom_hline(yintercept = , size = , color = , linetype)** - creates a horizontal reference line through the plot according to yintercept     
 * **geom_vline(xintercept = , size =, color =, linetype =)** - creates a verticle reference line through the plot according to xintercept     
 * **geom_rect(aes(xmin = , xmax = , ymin = , ymax = ))** - creates a rectangle to box in and highlight interesting data    
 * **geom_segment(aes(x = , y = , xend = , yend = ,) arrow = )** - creates a line segment within the plot, it can be an arrow     
-
+     
 <br  />
-
-#### Scales    
  
-Scales are automatically set when creating a ggplot, but sometimes it's useful to alter the color scheme, legend, or axes to better communicate your visulisation. The naming sceme for scales is scale_ followed by the name of the aesthetic then _, and the name of the scale.
+### Scales    
+ 
+Scales are automatically set when you create a ggplot, but sometimes it's useful to alter the color scheme, legend, or axes to better communicate your visulisation. The naming sceme for these functions  is scale_ followed by the name of the aesthetic then another _, and then the name of the scale.
 
 ##### Aestetic Names
      
@@ -198,11 +195,12 @@ Scales are automatically set when creating a ggplot, but sometimes it's useful t
   * **\_gray** -creates a gradient in gray
   * **\_brewer** - brewer( palette = " "), calls RColorBrewer palettes    
      
-##### Axes     
+<br  />
 
-It's pretty easy to alter axes in ggplot2. Here are some commented examples for common problems:    
+#### Axes      
 ```{r eval=FALSE}
-scale_x_continuous(breaks = seq(0, 10, by = 1), labels = c(1:9, "ten"))  # define breaks by sequence, define labels of breaks
+scale_x_continuous(breaks = seq(0, 10, by = 1), labels = c(1:9, "ten")) 
+# define breaks by sequence, define labels of breaks
 
 scale_x_discrete(breaks=c("ctrl", "trt1", "trt2"),            # defined tick marks
                  labels=c("Control", "Treat 1", "Treat 2"))   # new names
@@ -223,44 +221,40 @@ library(scales)   # changing the y-axis to log 10
 scale_y_log10(breaks = trans_breaks("log10", function(x) 10^x),
               labels = trans_format("log10", math_format(10^.x)))
 ```
+Scales can be used to alter axes in ggplot2, it's a fairly straight forward process. These are some commented examples for fixing common behavioral issues you may have with your axes.   
 
-##### Legends    
-Legends can be a bit harder to wrangle. Here are examples to several common problems I have with legends.    
+<br  />     
 
-Controlling the position, or existance of the legend 
+#### Legends    
+Legends can be a bit harder to wrangle than axes. Heere are examples to several common problems I have with legends.      
 ```{r eval=FALSE}
-theme(legend.position = "left")
-theme(legend.position = "top")
-theme(legend.position = "bottom")
-theme(legend.position = "right") # the default
 
-theme(legend.position = "none") # no legend will be generated
+theme(legend.position = "left")    # legend to the left of plot
+theme(legend.position = "top")     # legend above plot
+theme(legend.position = "bottom")  # legend below plot
+theme(legend.position = "right")   # the default
+theme(legend.position = "none")    # no legend will be generated
 
 geom_point(aes(...), show.legend=FALSE) # don't include this geom in the legend    
-```
-     
 
-Hiding the legend's title
-```{r eval=FALSE}
-theme(legend.title = element_blank())
-```
-     
-Changing the order of items in your legend. Declare the scale_ function based on your plot, use guides = for a simple reverse     
-```{r eval=FALSE}
+theme(legend.title = element_blank()) # hides the legends title
+
+# changing the order of items in your legend, scale_ function is dependent upon the type of plot
 scale_fill_discrete(breaks=(c("item1", "item2", "item3")))
 
+# simply reverse the current item display in thelegend
 scale_fill_discrete(guide = guide_legend(reverse=TRUE))
-```
 
-Manually alter the color, breaks, labels, and names of your legend, again the scale_ function is based on your plot
-```{r eval=FALSE}
+# manually alter color, break, label, and name of legend items.
 scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9"), 
                   name="Experimental\nCondition",
                   breaks=c("ctrl", "trt1", "trt2"),
                   labels=c("Control", "Treatment 1", "Treatment 2"))
 ```
 
-##### Colors    
+<br  />
+
+#### Colors    
 
 Some of my favorite preset colors include 
 
@@ -271,18 +265,27 @@ Some of my favorite preset colors include
 * deepskyblue
 * lightslateblue    
 
-The RColorBrewer package also has pleasing palettes
-```{r}
+The RColorBrewer package also has pleasing color palettes
+```{r eval=FALSE}
 RColorBrewer::display.brewer.all()
 ```
-      
+  
+<br  />   
+
 #### Themes      
 
-Sometimes you don't want to go through the effort of creating your own theme, so ggplot2 has built in themes to change it up a little bit. There are many expansions created for ggplot2 themes, but heres four of the most popular base ggplot2 themes. 
+Sometimes you don't want to go through the effort of creating your own theme, so ggplot2 has built in themes built in. here are four basic themes that are excellent for exploratory analysis or creating a base to build off.   
 
 * **theme_bw()** - A while background with gridlines
 * **theme_grey()** - the default theme 
 * **theme_classic()** - A white background with no gridlines
 * **theme_minimal()** - mystery theme, check it out! 
 
-#### Summary 
+<br  />    
+
+### Summary    
+This is just a fraction of what ggplot2 can do, but with this infromation I think you should be able to solve 80% of your graphing needs. Again, the references listed at the beginning of this write up are excellent, and you should take a look at them. If you want to learn more about R for Data Science written by Hadley Wickham, it's free to read at <http://r4ds.had.co.nz/>. If you're too lazy to read the entire book, check out the other posts in my R for Data Science Summary Series.    
+
+
+Thanks for reading,     
+- Fisher 
