change text dplyr

--- a/tidying_data_with_tidyr.Rmd
+++ b/tidying_data_with_tidyr.Rmd
@@ -1,3 +1,12 @@
+---
+title: "Untitled"
+author: "Fisher Ankney"
+date: "2/18/2018"
+output: html_document
+---
+
+
+
 ############################
 ##      How to tidyr      ##
 ##    guide & snippets    ##
